--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Addons ISTEX pour Firefox et Chrome</title>
+  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/fonjnfcanlbgnjgfhiocggldmpnhdhjg">
+<!--   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/apdfllckaahabafndbhieahigkjlhalf"> -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
