Ajout de la prise en compte de Firefox (vérification version incluse)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </h1>
         <details open>L'accès à ces ressources est limité aux ayants-droits ISTEX, c'est-à-dire les personnels de l'Enseignement Supérieur et de la Recherche.</details>
         <div id="tooltip-wrapper">
-          <button id="addingToBrowser" type="button" class="btn btn-lg">Ajouter l'extension à votre navigateur</button>
+          <a href="#" id="addingToBrowser" role="button" class="btn btn-lg">Ajouter l'extension à votre navigateur</a>
         </div>
       </div>
       <div class="col-xs-6">
