--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="catch-phrase col-xs-offset-1 col-xs-4">
+      <div class="catch-phrase col-xs-offset-1 col-md-4">
         <h1>Accédez directement au plein-texte PDF sur la plateforme ISTEX.
 <div class="small">L'extension ISTEX analyse l'ensemble des pages que vous visitez à la recherche d'identifiants documentaires (DOI, PMID...) et ajoute un lien vers la plateforme ISTEX si cette ressource y est disponible.</div>
         </h1>
@@ -21,7 +21,7 @@
           <a href="#" id="addingToBrowser" role="button" class="btn btn-lg">Ajouter l'extension à votre navigateur</a>
         </div>
       </div>
-      <div class="col-xs-6">
+      <div class="col-md-6">
         <img class="capture" src="img/capture4.png" alt="screenshot">
       </div>
     </div>
