--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Accédez directement au plein-texte PDF sur la plateforme ISTEX.
 <div class="small">L'extension ISTEX analyse l'ensemble des pages que vous visitez à la recherche d'identifiants documentaires (DOI, PMID...) et ajoute un lien vers la plateforme ISTEX si cette ressource y est disponible.</div>
         </h1>
-        <details open>L'accès à ces ressources est limité aux ayants-droits ISTEX, c'est-à-dire les personnels de l'Enseignement Supérieur et de la Recherche.</details>
+        <details open>L'accès à ces ressources est limité aux ayants droit ISTEX, c'est-à-dire les personnels de l'Enseignement Supérieur et de la Recherche.</details>
         <div id="tooltip-wrapper">
           <a href="#" id="addingToBrowser" role="button" class="btn btn-lg">Ajouter l'extension à votre navigateur</a>
         </div>
