fix broken link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="catch-phrase col-xs-offset-1 col-md-4">
         <h1>Accédez directement au plein-texte PDF sur la plateforme ISTEX.
 <div class="small">L'extension ISTEX analyse l'ensemble des pages que vous visitez à la recherche d'identifiants documentaires (DOI, PMID...) et ajoute un lien vers la plateforme ISTEX si cette ressource y est disponible.</div>
-<div class="small">Pour savoir comment configurer l'extension pour votre navigateur, vous pouvez consulter la documentation <a id="docUsers" href="https://doc.istex.fr/users/navigateur/">ici</a>.</div>
+<div class="small">Pour savoir comment configurer l'extension pour votre navigateur, vous pouvez consulter la documentation <a id="docUsers" href="https://doc.istex.fr/users/usage/button/">ici</a>.</div>
         </h1>
         <details open>L'accès à ces ressources est limité aux ayants droit ISTEX, c'est-à-dire les personnels de l'Enseignement Supérieur et de la Recherche.</details>
         <div id="tooltip-wrapper">
