--- a/index.html
+++ b/index.html
@@ -39,6 +39,38 @@
     <script type="text/javascript" src="js/vendor/bowser.min.js"></script>
     <script type="text/javascript" src="js/detect.js"></script>
   </div>
+  
+  
+  <!-- Piwik -->
+  <script type="text/javascript">
+    var _paq = _paq || [];
+      _paq.push([function() {
+  var self = this;
+  function getOriginalVisitorCookieTimeout() {
+  var now = new Date(),
+  nowTs = Math.round(now.getTime() / 1000),
+  visitorInfo = self.getVisitorInfo();
+  var createTs = parseInt(visitorInfo[2]);
+  var cookieTimeout = 33696000;
+   var originalTimeout = createTs + cookieTimeout - nowTs;
+  return originalTimeout;
+  }
+  this.setVisitorCookieTimeout( getOriginalVisitorCookieTimeout() );
+  }]);
+
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+       var u="//piwik2.inist.fr/";
+      _paq.push(['setTrackerUrl', u+'piwik.php']);
+      _paq.push(['setSiteId', '48']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
+  <noscript><p><img src="//piwik2.inist.fr/piwik.php?idsite=48" style="border:0;" alt="" /></p></noscript>
+  <!-- End Piwik Code -->  
+  
 </body>
 
 </html>
