--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-xs-2"><a href="mailto:api-users@listes.istex.fr">Email</a></div>
       </div>
     </footer>
-    <script type="text/javascript" src="https://content-delivery.istex.fr/web-header/main.js"></script>
+    <script id="iwh_script" src="//web-header.delivery.istex.fr/bundle.js" ></script>
     <script type="text/javascript" src="js/vendor/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/vendor/bowser.min.js"></script>
