feat: replace legacy install button by a link pointing to Click and Read

--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
   <div class="container">
     <div class="row">
       <div class="catch-phrase col-xs-offset-1 col-md-4">
-        <h1>Accédez directement au plein-texte PDF sur la plateforme ISTEX.
-<div class="small">L'extension ISTEX analyse l'ensemble des pages que vous visitez à la recherche d'identifiants documentaires (DOI, PMID...) et ajoute un lien vers la plateforme ISTEX si cette ressource y est disponible.</div>
-<div class="small">Pour savoir comment configurer l'extension pour votre navigateur, vous pouvez consulter la documentation <a id="docUsers" href="https://doc.istex.fr/users/usage/button/">ici</a>.</div>
-        </h1>
-        <details open>L'accès à ces ressources est limité aux ayants droit ISTEX, c'est-à-dire les personnels de l'Enseignement Supérieur et de la Recherche.</details>
+        <h1>Fin de l'extension ISTEX 🛑</h1>
+
+        <div>L'extension ISTEX, également appelée "Bouton ISTEX", n'est plus maintenue et ne peut plus être installée.<br/>
+        À la place, nous vous suggérons de télécharger l'extension "Click and Read", également développée à l'Inist-Cnrs. Son fonctionnement est tout à fait similaire, mais vous permet d'interroger d'autres bases en plus d'Istex, ce qui augmente vos chances d'accéder au texte intégral.</div>
+        
         <div id="tooltip-wrapper">
-          <a href="#" id="addingToBrowser" role="button" class="btn btn-lg">Ajouter l'extension à votre navigateur</a>
+          <a href="https://clickandread.inist.fr/" id="addingToBrowser" role="button" class="btn btn-lg">Obtenir Click & Read</a>
         </div>
       </div>
       <div class="col-md-6">
-        <img class="capture" src="img/capture4.png" alt="screenshot">
+        <img class="capture" src="img/closed.png" alt="screenshot">
       </div>
     </div>    
     <script id="iwh_script" src="//web-header.delivery.istex.fr/bundle.js" ></script>
     <script type="text/javascript" src="js/vendor/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/vendor/bowser.min.js"></script>
-    <script type="text/javascript" src="js/detect.js"></script>
   </div>
   
   
